--- a/03/06. FastA+B.md
+++ b/03/06. FastA+B.md
@@ -45,4 +45,4 @@ class Program
 ### 결과    
 : string으로 입/출력을 시도하니 시간 초과가 나왔다. [검색](https://coding-of-today.tistory.com/81)을 통해 스트링 빌더를 이용하여 해결하였다.
 
-![03단계 06번문항 제출결과](result_06.png)
+![03단계 06번문항 제출결과](00/result_06.png)
